# clawbench

./: .gitignore  AGENTS.md  CLAUDE.md  GOAL.md  LEARNINGS.md  README.md  STATUS.md  pyproject.toml
deploy/: openclaw-vllm-small-bench.service
manifests/: api-providers.example.json  initial-models.json  openclaw-agent-core.json  openclaw-agent-discovery-smoke.example.json  openclaw-certification-full.example.json  real-repo-readonly.example.json  tier-large.json  tier-medium.json  tier-small.json  tier-xlarge.json  vllm-concurrency-sweep.example.json  vllm-gptoss-smoke.example.json  vllm-hardware-setups.example.json  vllm-local-candidates.example.json  vllm-local.example.json  vllm-long-context.example.json  vllm-qwen36-fp8-lean16k-live.example.json  vllm-qwen36-fp8-lean8k-live.example.json  vllm-qwen36-fp8-live.example.json
openclaw-config/: openai-provider.example.json  qwen36-agent-default-params.example.json  qwen36-agent-lean-8k-defaults.example.json  qwen36-agent-lean-8k-params.example.json  qwen36-vllm-provider-lean16k.merge.example.json  qwen36-vllm-provider-lean8k.merge.example.json  qwen36-vllm-provider.merge.example.json  vllm-provider-smoke.example.json
openclaw_bench/: __init__.py  aggregation.py  backend.py  calibration.py  certification.py  cli.py  container.py  manifest.py  models.py  preflight.py  quickstart.py  reporting.py  runner.py  scoring.py  serve.py  telemetry.py  workspace.py
tests/: test_aggregation.py  test_backend.py  test_calibration.py  test_certification.py  test_container.py  test_docs.py  test_inherit.py  test_manifest.py  (+17 more)
(+96 files in other folders)
